# e4s-cl-completion

./: Cargo.toml  enable.sh
src/: completion.json  lib.rs
