[package]
name = "e4s-cl-completion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.130", features = ['derive'] }
serde_json = "1.0.59"
dirs = "3.0.2"
log = "0.4.14"
simplelog = "0.11.2"
shlex = "1.1.0"
